cleaned up start.sh, set docker env to jammy